examples/good/in/13-01-nested-function.see
int fun() {
    int funnier() {
        return 2115;
    }
    return funnier();
}

void main() {
    printInt(fun()); // 2115
    return;
}
