examples/bad/12-04-reference-error.see
void fun(int &x) {
    x++;
}

void main() {
    fun(2115);

    return;
}
